--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,33 @@
+boto3
+botocore
 certifi
 chardet
 Click
 dj-database-url
 Django
 django-heroku
+docutils
 Flask
+Flask-request-params
 gunicorn
 idna
 itsdangerous
 Jinja2
+jmespath
 MarkupSafe
 pip
 pipenv
 psycopg2
 psycopg2-binary
+python-dateutil
 pytz
 requests
+s3transfer
 setuptools
+six
 sqlparse
 urllib3
 virtualenv
 virtualenv-clone
 Werkzeug
 whitenoise
-flask_request_params
-boto3
